Fix overflow of tangy-location preventing clicking on first case

--- a/editor/src/app/groups/group-cases/group-cases.component.css
+++ b/editor/src/app/groups/group-cases/group-cases.component.css
@@ -24,6 +24,8 @@ tangy-location {
 
 #header {
   background: var(--primary-color-lighter);
+  /* necessary for tangy-location's negative bottom margin not overlapping with content below hiding click targets */
+  overflow: hidden;
 }
 
 #header-buttons {
